# kunst-reise

./: .gitignore  Cargo.toml  diesel.toml  kunstreise.db
data/: artists.csv  paintings.csv  paintings_deduplicated.csv  schools.csv
data-gen-routines/: artists_dta.csv  getting-gpt-data.ipynb  schools_dta.csv
migrations/2025-03-11-010113_kunstreise_data/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
static/css/: artist-layout.css  artists-styles.css  escuela-layout.css  escuelas-styles.css  styles.css
templates/: artist-layout.html.tera  artists.html.tera  escuela-layout.html.tera  escuelas.html.tera  index.html.tera
