[package]
name = "kunst-reise"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
slug = "0.1"
csv = "1.3.1"

[lib]
name = "kunstreise"
path = "src/lib.rs"